test/compilable/imports/rdmdimport.d
module imports.rdmdimport;

void foo() { }
