test/fail_compilation/fail169.d

void foo(const out int x) { }

